29 January 2015: Wouter
	- Fix pyunbound byte string representation for python3.

26 January 2015: Wouter
	- Fix unintended use of gcc extension for incomplete enum types,
	  compile with pedantic c99 compliance (from Daniel Dickman).

23 January 2015: Wouter
	- windows port fixes, no AF_LOCAL, no chown, no chmod(grp).

16 January 2015: Wouter
	- unit test for local unix connection.  Documentation and log_addr
	  does not inspect port for AF_LOCAL.
	- unbound-checkconf -f prints chroot with pidfile path.

13 January 2015: Wouter
	- iana portlist update.

12 January 2015: Wouter
	- Cast sun_len sizeof to socklen_t.
	- Fix pyunbound ord call, portable for python 2 and 3.

7 January 2015: Wouter
	- Fix warnings in pythonmod changes.

6 January 2015: Wouter
	- iana portlist update.
	- patch for remote control over local sockets, from Dag-Erling
	  Smorgrav, Ilya Bakulin.  Use control-interface: /path/sock and
	  control-use-cert: no.
	- Fixup that patch and uid lookup (only for daemon).
	- coded the default of control-use-cert, to yes.

5 January 2015: Wouter
	- getauxval test for ppc64 linux compatibility.
	- make strip works for unbound-host and unbound-anchor.
	- patch from Stephane Lapie that adds to the python API, that
	  exposes struct delegpt, and adds the find_delegation function.
	- print query name when max target count is exceeded.
	- patch from Stuart Henderson that fixes DESTDIR in
	  unbound-control-setup for installs where config is not in
	  the prefix location.
	- Fix #634: fix fail to start on Linux LTS 3.14.X, ignores missing
	  IP_MTU_DISCOVER OMIT option (fix from Remi Gacogne).
	- Updated contrib warmup.cmd/sh to support two modes - load
	  from pre-defined list of domains or (with filename as argument)
	  load from user-specified list of domains, and updated contrib
	  unbound_cache.sh/cmd to support loading/save/reload cache to/from
	  default path or (with secondary argument) arbitrary path/filename,
	  from Yuri Voinov.